--- a/apps/rickyandmortyapp/src/index.html
+++ b/apps/rickyandmortyapp/src/index.html
@@ -7,6 +7,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet"> 
   </head>
   <body>
     <div id="root"></div>
