--- a/apps/rickyandmortyapp/src/index.html
+++ b/apps/rickyandmortyapp/src/index.html
@@ -2,17 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Rickyandmortyapp</title>
+    <title>Rick And Morty GUI</title>
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./assets/rickandmortyfavicon.svg" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet"> 
   </head>
   <body>
     <div id="root"></div>
-
-    
   </body>
 </html>
